--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1176,7 +1176,7 @@ section.lazy-placeholder:after {
 }
 .cid-rENrP80VFT .timeline-text-content {
   padding: 2rem 2.5rem;
-  background: #149dcc;
+  background: #879a9f;
   margin-left: 2rem;
 }
 .cid-rENrP80VFT .timeline-text-content p {
@@ -1187,7 +1187,7 @@ section.lazy-placeholder:after {
 }
 .cid-rENrP80VFT .time-line-date-content p {
   padding: 2rem 2.5rem;
-  background: #149dcc;
+  background: #879a9f;
   float: right;
 }
 .cid-rENrP80VFT .timeline-element {
@@ -1236,7 +1236,7 @@ section.lazy-placeholder:after {
   border-radius: 50%;
   font-size: 30px;
   display: inline-block;
-  background-color: #149dcc;
+  background-color: #879a9f;
   top: 20px;
   margin-left: -10px;
 }
@@ -1246,7 +1246,7 @@ section.lazy-placeholder:after {
   position: absolute;
   content: "";
   width: 2px;
-  background-color: #149dcc;
+  background-color: #879a9f;
   left: calc(50% - 1px);
   height: calc(100% + 4rem);
 }
