--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1162,7 +1162,7 @@ section.lazy-placeholder:after {
   color: #0f7699;
 }
 .cid-rF5N3k4UE1 H4 {
-  color: #000000;
+  color: #0f1c36;
 }
 .cid-rENrP80VFT {
   padding-top: 90px;
@@ -1451,6 +1451,10 @@ section.lazy-placeholder:after {
 }
 .cid-rPuphSHVl5 {
   background-image: url("../../../assets/images/mbr-3-1920x1281.jpg");
+}
+.cid-rPuphSHVl5 .mbr-text,
+.cid-rPuphSHVl5 .mbr-section-btn {
+  color: #efefef;
 }
 .cid-rF5MrOPUse {
   padding-top: 90px;
