create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1450,11 +1450,11 @@ section.lazy-placeholder:after {
   color: #0f7699;
 }
 .cid-rPuphSHVl5 {
-  background-image: url("../../../assets/images/mbr-3-1920x1281.jpg");
+  background-image: url("../../../assets/images/mbr-8-1920x1280.jpg");
 }
 .cid-rPuphSHVl5 .mbr-text,
 .cid-rPuphSHVl5 .mbr-section-btn {
-  color: #efefef;
+  color: #000000;
 }
 .cid-rF5MrOPUse {
   padding-top: 90px;
